--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <header class="intro">
         <div class="intro-body">
             <h1 class="brand-heading">
-                <img src="/img/inform-transform.png" alt="inform/transform" style="width: 100%">
+                <img src="img/inform-transform.png" alt="inform/transform" style="width: 100%">
             </h1>
             <div class="container">
                 <div class="row">
