Change navbar text to black

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -67,6 +67,7 @@ a:focus {
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: {{ site.color.primary-dark }};
+
 }
 
 .navbar-custom .navbar-brand {
@@ -89,7 +90,7 @@ a:focus {
 }
 
 .navbar-custom a {
-    color: #fff;
+    color: #000;
 }
 
 .navbar-custom .nav li.active {
