Add order to navbar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                      <span class="light">Inform/Transform
+                    <span class="light">Inform/Transform
                 </a>
             </div>
 
@@ -19,6 +19,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#order">Order</a>
                     </li>
                 </ul>
             </div>
