--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
     {% include head.html %}
     <body>
     {% include header.html %}
+    {% include nav.html %}
+    {% include order.html %}
     {% include about.html %}
     {% include footer.html %}
     </body>
