Update about text

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
-                <p>Inform/Transform was created by Mimi Onuoha and Zara Rahman. Find them online at <a href="https://twitter.com/thistimeitsmimi">@thistimeitsmimi</a> and <a href="twitter.com/zararah">@zararah</a> and get in touch on hello[at]informtransform.info.</p>
+                <p>Inform/Transform was created by <a href="https://mimionuoha.com">Mimi Onuoha</a> and <a href="https://zararah.net/">Zara Rahman</a>. Find them on Twitter <a href="https://twitter.com/thistimeitsmimi">@thistimeitsmimi</a> and <a href="twitter.com/zararah">@zararah</a>.</p>
             </div>
         </div>
     </section>
