Add input class for tinyletter form

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -12,6 +12,10 @@ body {
     background-color: {{ site.color.primary-dark }};
 }
 
+input {
+    color: #000;
+}
+
 html {
     width: 100%;
     height: 100%;
