--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,11 +7,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <p class="intro-text">{{ site.description }}<br>
+                        <p class="intro-text">{{ site.description }}<br></p>
 <!--                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
- -->                    </div>
+-->                    
+                    </div>
                 </div>
             </div>
         </div>
