--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     {% include head.html %}
-    <body>
+    <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     {% include header.html %}
     {% include nav.html %}
     {% include order.html %}
